@@ -1,5 +1,10 @@
 2008-08-24  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/moduleset.py, tests/tests.py: recursively check <after>
+	dependencies when ordering modules.  (closes: #546640)
+
+2008-08-24  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/config.py, jhbuild/defaults.jhbuildrc: expose installprog
 	configuration variable, and defaults to install-check.
 
